Squashed 'website/' changes from d27c04b..debdb30
debdb30 [ALT] - Alterando path dos arquivos

git-subtree-dir: website
git-subtree-split: debdb3035118ea72423b17636eb44d6af1996a39

--- a/index.ejs
+++ b/index.ejs
@@ -9,7 +9,7 @@
   <!-- Arquivos referentes ao css e bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/website/css/style.css">
   <!-- Arquivos referentes ao fontawesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- Arquivos de Script do bootstrap -->
@@ -37,9 +37,9 @@
     </div>
     <h1>Lucas Feitosa</h1>
     <h5>Curriculum Vitae</h5>
-    <img class="cloud left-cloud" src="/images/cloud.png" alt="cloud">
-    <img class="rounded mx-auto d-block mountain" src="/images/mountain.png" alt="cloud">
-    <img class="cloud right-cloud" src="/images/cloud.png" alt="cloud">
+    <img class="cloud left-cloud" src="/website/images/cloud.png" alt="cloud">
+    <img class="rounded mx-auto d-block mountain" src="/website/images/mountain.png" alt="cloud">
+    <img class="cloud right-cloud" src="/website/images/cloud.png" alt="cloud">
     <canvas id="c"></canvas>
   </section>
 
@@ -56,7 +56,7 @@
         </p>
       </div>
       <div class="col-lg-4 text-center">
-        <img src="/images/profile.png" alt="Lucas Feitosa de Freitas" width="246" height="246" /> 
+        <img src="/website/images/profile.png" alt="Lucas Feitosa de Freitas" width="246" height="246" /> 
       </div>
       <div class="col-lg-4 about-container info">
         <h3>Personal Data</h3>
@@ -306,7 +306,7 @@
     <h1>Habilities</h1>
     <div class="row row-tr">
       <div class="col">
-        <img class="img-h" src="/images/xcode.png" alt="xcode" width="96px" height="96px">
+        <img class="img-h" src="/website/images/xcode.png" alt="xcode" width="96px" height="96px">
       </div>
       <div class="col">
         <h3>Mobile Applications</h3>
@@ -319,12 +319,12 @@
         <p>Web Development using technologies as HTML, CSS, Bootstrap 4, Javascipt and JQuery</p>
       </div>
       <div class="col">
-        <img class="img-h" src="/images/web.png" alt="">
+        <img class="img-h" src="/website/images/web.png" alt="">
       </div>
     </div>
     <div class="row row-tr">
       <div class="col">
-        <img class="img-h" src="/images/server.png" alt="">
+        <img class="img-h" src="/website/images/server.png" alt="">
       </div>
       <div class="col">
         <h3>Web Servers</h3>
@@ -337,7 +337,7 @@
         <p>Experience with mySQL, Oracle, SQLite and MongoDB</p>
       </div>
       <div class="col">
-        <img class="img-h" src="/images/database.png" alt="">
+        <img class="img-h" src="/website/images/database.png" alt="">
       </div>
     </div>
 
@@ -348,7 +348,7 @@
     <div class="row">
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="/images/eco.jpeg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/website/images/eco.jpeg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">EcoRec</a>
@@ -361,7 +361,7 @@
       </div>
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="/images/easy.jpeg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/website/images/easy.jpeg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">EasyTracking</a>
@@ -410,7 +410,7 @@
   </section>
 
 
-<script src="/js/waves.js" charset="utf-8"></script>
+<script src="/website/js/waves.js" charset="utf-8"></script>
 </body>
 
 </html>
